Bug 1527951 - Ignore WebP image's alpha channel when a frame is marked as opaque. r=tnikkel a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D19994

--HG--
extra : source : 1c887a569595636763f17265af1e7c8cced30d50